# Citrus

./: CMakeLists.txt
dependencies/glfw/examples/: heightmap.c
resources/shaders/: lit.wgsl  unlit.wgsl
src/core/: application.cpp  application.hpp  buffer.hpp  core.hpp  cstl.cpp  cstl.hpp  files.cpp  files.hpp  log.cpp  log.hpp  window.cpp  window.hpp
src/graphics/: graphicsManager.cpp  graphicsManager.hpp
src/graphics/types/: mesh.cpp  mesh.hpp
src/scene/: scene.cpp  scene.hpp  sceneManager.hpp
src/scene/components/generic/: transform.hpp  transformComponent.hpp
src/scene/components/graphics/: mesh.hpp  meshComponent.hpp
